# snapcode-ai

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  test_api.py
.streamlit/: config.toml
backend/: __init__.py  api_client.py  db_utils.py  image_utils.py
config/: __init__.py  settings.py
frontend/: __init__.py  components.py  styles.py
frontend/assets/: file
